[package]
name = "cargo-kewl"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "dashboards; graphs; charts-- for cargo!"
repository = "https://bend-n/cargo-kewl"
authors = ["bendn <bend.n@outlook.com>"]

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
ratatui = { version = "0.23.0", features = ["crossterm"] }
log = "0.4.20"
comat = "0.1.3"
ansi-to-tui = "3.1.0"
humantime = "2.1.0"

anyhow = "1.0.75"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
crossterm = "0.27.0"
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.8.2"
